# sCAN

./: .gitignore  CMakeLists.txt
src/: main.cpp
